[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "keychain"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
include = ["keychain*"]

[tool.pytest.ini_options]
python_files = ["test_*.py", "__eval_*_sec.py"]
testpaths = ["tests"]
